# stream_pad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RP2040_Deck_Demo.yaml
proto/: Config.proto  ProtoConfig.proto
src/: ActionId.hpp  Button.hpp  Config.cpp  Config.hpp  Neopixels.cpp  Neopixels.hpp  Page.cpp  Page.hpp  Pinmap.hpp  Pixel.hpp  RP2040_Deck_Demo.proto  ReadKeys.cpp  ReadKeys.hpp  Speaker.cpp  Speaker.hpp  Wheel.cpp  Wheel.hpp  main.cpp  memmap_custom.ld  memmap_custom2.ld
